--- a/src/RingGeneral.UI/Views/MainWindow.axaml
+++ b/src/RingGeneral.UI/Views/MainWindow.axaml
@@ -435,7 +435,7 @@
                   </ItemsControl.ItemTemplate>
                 </ItemsControl>
                 <TextBlock Text="{Binding Session.ValidationErreurs}" Foreground="#F87171" TextWrapping="Wrap" />
-                <TextBlock Text="{Binding Session.ValidationAvertissements}" Foreground="#FBBF24" TextWrapping="Wrap" ToolTip.Tip="{Binding Session.Tooltips['booking.warning']}" />
+                <TextBlock Text="{Binding Session.ValidationAvertissements}" Foreground="#FBBF24" TextWrapping="Wrap" ToolTip.Tip="{Binding Session.Tooltips[booking.warning]}" />
               </StackPanel>
             </Border>
           </StackPanel>
