--- a/src/RingGeneral.UI/Views/Start/CreateCompanyView.axaml
+++ b/src/RingGeneral.UI/Views/Start/CreateCompanyView.axaml
@@ -87,7 +87,7 @@
                        Foreground="#e2e8f0"/>
             <ComboBox ItemsSource="{Binding AvailableRegions}"
                       SelectedItem="{Binding SelectedRegion}"
-                      DisplayMemberBinding="{Binding RegionName}"
+                      DisplayMemberBinding="{Binding CountryName}"
                       FontSize="18"
                       Padding="12"
                       Background="#0f172a"
